Updated with version: 4.33.0 changes

--- a/adblock-betafish/button/popup.html
+++ b/adblock-betafish/button/popup.html
@@ -13,7 +13,7 @@
   <body style="overflow:hidden;">
     <div id="wrapper">
       <div id="menu-items">
-        <div id="titletext">
+        <div id="titletext" dir="ltr">
           <img class="header-logo" i18n-alt="adblock_logo" />
           <span id="header-info">
             <span id="premium_status_msg" i18n="premium"></span>
@@ -246,6 +246,7 @@
                 <span class="block_count_number" id="page_blocked_count"> </span>
               </span>
               <span
+                id="blocked_n_in_total"
                 i18n="blocked_n_in_total"
                 i18n_replacement_el="total_blocked_count"
                 class="right"
