--- a/adblock-betafish/options/filters.html
+++ b/adblock-betafish/options/filters.html
@@ -75,7 +75,9 @@
           <select id="language_select" aria-labelledby="language_dropdown_container">
             <option value="" i18n="selectlanguage2"></option>
           </select>
-          <i class="material-icons md-18" role="img" aria-hidden="true">arrow_drop_down_circle</i>
+          <i id="language-select-icon" class="material-icons md-18" role="img" aria-hidden="true"
+            >arrow_drop_down_circle</i
+          >
         </div>
       </div>
 
