--- a/adblock-betafish/options/general.html
+++ b/adblock-betafish/options/general.html
@@ -137,19 +137,24 @@
         </div>
       </li>
 
-      <li class="checkbox-indentation section-padding">
-        <div>
-          <span class="checkbox md-stack">
-            <input type="checkbox" class="feature" id="enable_twitch_channel_allowlist" />
-            <i class="unchecked material-icons" role="img" aria-hidden="true">lens</i>
-            <i
-              class="checked material-icons circle-icon-bg-24 checkbox-icon"
-              role="img"
-              aria-hidden="true"
-              >check_circle</i
-            >
-          </span>
-          <label for="enable_twitch_channel_allowlist" i18n="allowlisting_twitch_channels"></label>
+      <li class="section-padding checkbox-indentation">
+        <div class="section-padding add-space-between">
+          <div>
+            <span class="checkbox md-stack">
+              <input type="checkbox" class="feature" id="enable_twitch_channel_allowlist" />
+              <i class="unchecked material-icons" role="img" aria-hidden="true">lens</i>
+              <i
+                class="checked material-icons circle-icon-bg-24 checkbox-icon"
+                role="img"
+                aria-hidden="true"
+                >check_circle</i
+              >
+            </span>
+            <label
+              for="enable_twitch_channel_allowlist"
+              i18n="allowlisting_twitch_channels"
+            ></label>
+          </div>
           <a
             class="help-link-icon right"
             href="https://help.getadblock.com/support/solutions/articles/6000148339-does-adblock-block-ads-on-twitch-"
