--- a/adblock-betafish/options/index.html
+++ b/adblock-betafish/options/index.html
@@ -27,8 +27,14 @@
               id="sidebar-adblock-logo"
               i18n-alt="adblock_home"
               src="icons/default_theme/logo.svg"
+              dir="ltr"
             />
-            <img id="sidebar-adblock-logo-narrow" i18n-alt="adblock_home" src="icons/ab-38.png" />
+            <img
+              id="sidebar-adblock-logo-narrow"
+              i18n-alt="adblock_home"
+              src="icons/ab-38.png"
+              dir="ltr"
+            />
           </a>
 
           <nav id="sidebar-tabs">
