--- a/adblock-betafish/alias/devtools-panel.html
+++ b/adblock-betafish/alias/devtools-panel.html
@@ -3,9 +3,8 @@
 <!-- adblockpluschrome/adblockplusui/devtools-panel.html -->
 <html>
   <head>
-    <title>Devtools Panel</title>
     <meta charset="utf-8" />
-    <link type="text/css" rel="stylesheet" href="devtools-panel.css" />
+    <link type="text/css" rel="stylesheet" href="skin/devtools-panel.css" />
     <script src="polyfill.js"></script>
     <script src="ext/common.js"></script>
     <script src="ext/content.js"></script>
@@ -68,7 +67,7 @@
       <tr>
         <td>
           <div class="request-wrapper">
-            <div class="url" data-i18n="devtools_request_url"></div>
+            <div class="url"></div>
             <div class="domain"></div>
           </div>
         </td>
