Updated with version: 4.37.0 changes

--- a/adblock-betafish/options/image-swap.html
+++ b/adblock-betafish/options/image-swap.html
@@ -467,7 +467,7 @@
     </div>
 
     <div class="translation_credits italic do-not-display"></div>
-    <footer style="display: none;">
+    <footer class="myadblock_feedback_footer">
       <section>
         <h2 i18n="myadblock_feedback_title"></h2>
         <p i18n="myadblock_feedback_info"></p>
