--- a/adblock-betafish/options/mab.html
+++ b/adblock-betafish/options/mab.html
@@ -110,7 +110,7 @@
       <div class="translation_credits italic do-not-display"></div>
     </section>
 
-    <footer style="display: none;">
+    <footer style="display: none;" class="myadblock_feedback_footer">
       <section>
         <h2 i18n="myadblock_feedback_title"></h2>
         <p i18n="myadblock_feedback_info"></p>
