--- a/adblock-betafish/options/support.html
+++ b/adblock-betafish/options/support.html
@@ -67,7 +67,7 @@
     <textarea id="changes" class="widest" style="display:none;"></textarea>
 
     <div class="translation_credits italic do-not-display"></div>
-    <footer>
+    <footer class="myadblock_feedback_footer">
       <section>
         <h2 i18n="feedback_title" class="paragraph-title bottom-line"></h2>
         <div class="section-padding add-space-between support-text">
