Updated with version: 4.38.0 changes

--- a/adblock-betafish/button/popup.html
+++ b/adblock-betafish/button/popup.html
@@ -146,6 +146,28 @@
           </button>
         </div>
 
+        <!-- Premium DC CTA -->
+        <div id="div_premium_dc_cta" class="premium-dc-cta premium-cta">
+          <div class="cta-description dc-cta-description">
+            <span
+              tabindex="0"
+              id="dc-cta-text"
+              class="dc-cta-message"
+              i18n="new_premium_feature"
+              role="link"
+              ><span></span
+            ></span>
+          </div>
+
+          <button
+            tabindex="0"
+            id="close-premium-dc-cta"
+            class="premium-dc-cta-close premium-cta-close"
+          >
+            <i class="material-icons md-18" role="img" i18n-aria-label="close">close</i>
+          </button>
+        </div>
+
         <!-- YT Channel Allowlist -->
         <section id="yt_channel_section" class="primary_section">
           <span class="channel_name_row">
@@ -226,6 +248,9 @@
                 tabindex="0"
                 id="help_footer"
               ></a>
+            </div>
+            <div class="popup-footer">
+              <span i18n="dont_know_help_me" id="dc_help_footer"></span>
             </div>
           </div>
         </section>
