--- a/adblock-betafish/options/mab.html
+++ b/adblock-betafish/options/mab.html
@@ -36,10 +36,7 @@
         <div class="mab-feature hover-shadow">
           <a href="#mab-themes">
             <section class="mab-feature-header">
-              <i class="material-icons md-24 header-icon" role="img" aria-hidden="true"
-                >featured_video</i
-              >
-              <span i18n="make_adblock_yours_title"></span>
+              <span i18n="themes"></span>
             </section>
             <section class="mab-feature-body">
               <span i18n="make_adblock_yours_description"></span>
@@ -59,8 +56,7 @@
         <div class="mab-feature hover-shadow">
           <a href="#mab-image-swap">
             <section class="mab-feature-header">
-              <i class="material-icons md-24 header-icon" role="img" aria-hidden="true">photo</i>
-              <span i18n="see_photos_no_ads_title"></span>
+              <span i18n="image_swap"></span>
             </section>
             <section class="mab-feature-body">
               <span i18n="see_photos_no_ads_description"></span>
@@ -80,8 +76,7 @@
         <div class="mab-feature hover-shadow">
           <a href="#sync">
             <section class="mab-feature-header">
-              <i class="material-icons md-24 header-icon" role="img" aria-hidden="true">sync</i>
-              <span i18n="sync_your_settings_title"></span>
+              <span i18n="sync_tab_item"></span>
             </section>
             <section class="mab-feature-body">
               <span i18n="sync_your_settings_description"></span>
@@ -93,19 +88,26 @@
         </div>
         <!-- END: Sync tab  tab feature -->
 
-        <!-- START: Teaser -->
-        <div class="mab-feature teaser">
-          <section class="mab-feature-header">
-            <i class="material-icons md-24 header-icon" role="img" aria-hidden="true"
-              >access_time</i
-            >
-            <span i18n="myadblock_more_coming_soon"></span>
-          </section>
-          <section class="mab-feature-body">
-            <span i18n="premium_benefits_explained"></span>
-          </section>
+        <!-- START: DC feature -->
+        <div class="mab-feature hover-shadow">
+          <a href="#distractioncontrol">
+            <section class="mab-feature-header">
+              <span i18n="newmyadblockenrollment" class="newLabelText">nbsp;</span
+              ><span i18n="distraction_control"></span>
+            </section>
+            <section class="mab-feature-body">
+              <span i18n="goodbye_distractions"></span>
+              <section class="feature-preview">
+                <img
+                  id="distraction-control-preview"
+                  i18n-alt="distraction_control_example"
+                  src="icons/distraction-control-preview.svg"
+                />
+              </section>
+            </section>
+          </a>
         </div>
-        <!-- END: Teaser -->
+        <!-- END: Sync tab  tab feature -->
       </div>
       <div class="translation_credits italic do-not-display"></div>
     </section>
