--- a/adblock-betafish/options/sync.html
+++ b/adblock-betafish/options/sync.html
@@ -14,7 +14,7 @@
     <section>
       <!-- Start: Payment section visible only to free MAB users -->
       <section id="locked-user-pay-section-sync" class="bottom-line" style="display: none;">
-        <p i18n="sync_premium_cta"></p>
+        <p i18n="myadblock_short_description_to_pay"></p>
         <a
           id="get-it-now-sync"
           i18n="get_it_now"
