Updated with version: 4.42.0 changes

--- a/adblock-betafish/button/popup.html
+++ b/adblock-betafish/button/popup.html
@@ -208,6 +208,26 @@
           </div>
         </div>
 
+        <!-- Free DC CTA -->
+        <div id="div_free_dc_cta" class="premium-cta">
+          <div class="cta-description">
+            <span id="newText_v2" i18n="new_badge"></span>
+            <span
+              tabindex="0"
+              id="free-dc-cta-text"
+              class="cta-message"
+              i18n="block_floating_videos"
+              role="link"
+              ><span></span
+            ></span>
+          </div>
+
+          <button tabindex="0" id="div_free_dc_cta_close" class="premium-cta-close">
+            <i class="material-icons md-18" role="img" i18n-aria-label="close">close</i>
+          </button>
+        </div>
+
+
         <!-- Premium themes CTA -->
         <div id="div_premium_themes_cta" class="premium-cta">
           <div class="cta-description">
