--- a/adblock-betafish/options/index.html
+++ b/adblock-betafish/options/index.html
@@ -103,12 +103,9 @@
                   </li>
                   <li>
                     <a href="#distractioncontrol" class="tablink">
-                      <img
-                        class="newItemIcon do-not-display"
-                        id="newItemIconImg"
-                        type="image/svg+xml"
-                        src="icons/one-icon.svg"
-                      />
+                      <i class="material-icons" role="img" aria-hidden="true" id="new-dc-icon"
+                        >lens</i
+                      >
                       <i
                         class="material-icons md-18 unlocked"
                         role="img"
@@ -116,7 +113,7 @@
                         id="dcIcon"
                         >block</i
                       >
-                      <span i18n="distraction_control"></span>
+                      <span id="dc-menu-item" i18n="distraction_control"></span>
                     </a>
                   </li>
                 </ul>
