Updated with version: 4.43.0 changes

--- a/adblock-betafish/button/popup.html
+++ b/adblock-betafish/button/popup.html
@@ -23,17 +23,19 @@
                 class="material-icons md-18"
                 id="help_link"
                 role="img"
-                i18n-aria-label="help"
+                i18n-aria-label="tabsupport"
                 >live_help</i
               >
+              <span id="help-icon-tooltip" i18n="tabsupport" aria-hidden="true"> </span>
               <i
                 tabindex="10"
                 class="material-icons md-18"
                 id="svg_options"
                 role="img"
-                i18n-aria-label="settings"
+                i18n-aria-label="options"
                 >settings</i
               >
+              <span id="options-icon-tooltip" i18n="options" aria-hidden="true"> </span>
             </span>
           </span>
         </div>
@@ -226,7 +228,6 @@
             <i class="material-icons md-18" role="img" i18n-aria-label="close">close</i>
           </button>
         </div>
-
 
         <!-- Premium themes CTA -->
         <div id="div_premium_themes_cta" class="premium-cta">
