Updated with version: 4.46.0 changes

--- a/adblock-betafish/button/popup.html
+++ b/adblock-betafish/button/popup.html
@@ -129,85 +129,28 @@
           </button>
         </div>
 
-        <!--VPM CTA option 1 -->
-        <div id="div_vpn_cta_1" class="premium-cta">
+        <!--VPN CTA option -->
+        <div id="div_vpn_cta" class="premium-cta">
           <div class="cta-description">
             <span id="newText_v2" i18n="new_badge"></span>
-            <span tabindex="0" id="vpn_cta_1" class="cta-message" role="link"
-              >Introducing AdBlock VPN</span
-            >
+            <span
+              tabindex="0"
+              id="vpn_cta"
+              class="cta-message"
+              role="link"
+              i18n="vpn_cta_msg"
+            ></span>
           </div>
 
-          <button tabindex="0" id="vpn_cta_1_close" class="premium-cta-close">
+          <button tabindex="0" id="vpn_cta_close" class="premium-cta-close">
             <i
-              id="vpn_cta_1_close_icon"
+              id="vpn_cta_close_icon"
               class="material-icons md-18"
               role="img"
               i18n-aria-label="close"
               >close</i
             >
           </button>
-        </div>
-
-        <!--VPM CTA option 2 -->
-        <div id="div_vpn_cta_2" class="premium-cta">
-          <div class="cta-description">
-            <span id="newText_v2" i18n="new_badge"></span>
-            <span tabindex="0" id="vpn_cta_2" class="cta-message" role="link"
-              >Tired of being tracked?</span
-            >
-          </div>
-
-          <button tabindex="0" id="vpn_cta_2_close" class="premium-cta-close">
-            <i
-              id="vpn_cta_2_close_icon"
-              class="material-icons md-18"
-              role="img"
-              i18n-aria-label="close"
-              >close</i
-            >
-          </button>
-        </div>
-
-        <!--VPM CTA option 3 -->
-        <div id="div_vpn_cta_3" class="premium-cta">
-          <div>
-            <span class="vpn-top-row">
-              <span tabindex="0" role="link">Tired of being tracked online?</span>
-              <span tabindex="0" class="div_vpn_cta_bold" role="link">Try AdBlock VPN.</span>
-            </span>
-            <div class="vpn-button-row">
-              <span tabindex="0" id="vpn_cta_3_close" i18n="no_thanks"> </span>
-              <button
-                tabindex="0"
-                id="vpn_cta_3_learn_more"
-                class="vpn-cta-button"
-                i18n="learn_more_without_period"
-              ></button>
-            </div>
-          </div>
-        </div>
-
-        <!--VPM CTA option 4 -->
-        <div id="div_vpn_cta_4" class="premium-cta">
-          <div>
-            <span class="vpn-top-row">
-              <span tabindex="0" role="link">Privacy made easy.</span>
-              <span tabindex="0" role="link"
-                >Enjoy safer browsing with
-                <span style="font-weight: bold;" id="vpn_cta_4_partII_bold_text">AdBlock VPN</span>.
-              </span>
-            </span>
-            <div class="vpn-button-row">
-              <span tabindex="0" id="vpn_cta_4_close" i18n="no_thanks"> </span>
-              <button
-                tabindex="0"
-                id="vpn_cta_4_learn_more"
-                class="vpn-cta-button"
-                i18n="learn_more_without_period"
-              ></button>
-            </div>
-          </div>
         </div>
 
         <!-- Free DC CTA -->
