Updated with version: 5.1.0 changes

--- a/adblock-betafish/options/bug-report.html
+++ b/adblock-betafish/options/bug-report.html
@@ -92,11 +92,7 @@
                 >(Be specific, because we'll try to reproduce the bug on our systems)</span
               >
             </label>
-            <textarea id="repro-steps" class="widest">
-  1.
-  2.
-  3.
-            </textarea>
+            <textarea id="repro-steps" class="widest"></textarea>
             <br />
 
             <label for="expected-result">
